# CodeGraphContext

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.mcp  MANIFEST.in  README.md  cgc-extended-spec.md  cgc.spec  docker-compose.dev.yml  docker-compose.plugin-stack.yml  docker-compose.plugins.yml  docker-compose.template.yml  pyproject.toml
.github/: services.json
.github/workflows/: build.yml  e2e-tests.yml  macos.yml  plugin-publish.yml  test-plugins.yml  test.yml
.specify/memory/: constitution.md
config/neo4j/: init.cypher
config/otel-collector/: config.yaml
docs/: BUNDLE_IMPLEMENTATION.md  BUNDLE_SUMMARY.md
docs/deployment/: MCP_SERVER_HOSTING.md
docs/plugins/: authoring-guide.md  cross-layer-queries.md  manual-testing.md
docs/plugins/examples/: send_test_span.py
k8s/: neo4j-deployment.yaml
k8s/cgc-mcp/: deployment.yaml  service.yaml
k8s/cgc-plugin-memory/: deployment.yaml  service.yaml
k8s/cgc-plugin-otel/: deployment.yaml  service.yaml
playground/src/core/: astWorker.ts
plugins/cgc-plugin-memory/: Dockerfile  README.md  pyproject.toml
plugins/cgc-plugin-memory/src/cgc_plugin_memory/: __init__.py  cli.py  mcp_tools.py
plugins/cgc-plugin-otel/: Dockerfile  README.md  pyproject.toml
plugins/cgc-plugin-otel/src/cgc_plugin_otel/: __init__.py  cli.py  mcp_tools.py  neo4j_writer.py  receiver.py  span_processor.py
plugins/cgc-plugin-stub/: README.md  pyproject.toml
plugins/cgc-plugin-stub/src/cgc_plugin_stub/: __init__.py  cli.py  mcp_tools.py
plugins/cgc-plugin-xdebug/: Dockerfile  README.md  pyproject.toml
plugins/cgc-plugin-xdebug/src/cgc_plugin_xdebug/: __init__.py  cli.py  dbgp_server.py  mcp_tools.py  neo4j_writer.py
pyinstaller_hooks/: hook-codegraphcontext.plugin_registry.py  rthook_importlib_metadata.py
samples/: KNOWN-LIMITATIONS.md  README.md  VALIDATION-REPORT.md  docker-compose.yml  smoke-all.sh
samples/php-laravel/: Dockerfile  README.md  artisan  composer.json
samples/php-laravel/app/Providers/: AppServiceProvider.php
samples/php-laravel/app/Repositories/: OrderRepository.php
samples/php-laravel/app/Services/: OrderService.php
samples/php-laravel/bootstrap/: app.php
samples/php-laravel/config/: app.php
samples/php-laravel/public/: index.php
samples/php-laravel/routes/: api.php
samples/python-fastapi/: Dockerfile  README.md  requirements.txt
samples/python-fastapi/app/: main.py  models.py
samples/python-fastapi/app/repositories/: order_repository.py
samples/python-fastapi/app/routers/: health.py  orders.py
samples/python-fastapi/app/services/: order_service.py
samples/ts-express-gateway/: Dockerfile  README.md  package.json
samples/ts-express-gateway/src/: index.ts  instrumentation.ts
samples/ts-express-gateway/src/routes/: dashboard.ts  health.ts  orders.ts
samples/ts-express-gateway/src/services/: proxy-service.ts  (+1 more)
specs/001-cgc-plugin-extension/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cgc-plugin-extension/checklists/: requirements.md
specs/001-cgc-plugin-extension/contracts/: cicd-pipeline.md  plugin-interface.md
src/codegraphcontext/: http_transport.py  plugin_registry.py  server.py
src/codegraphcontext/cli/: config_manager.py  main.py
src/codegraphcontext/core/: database_falkordb.py
src/codegraphcontext/tools/: code_finder.py  graph_builder.py
src/codegraphcontext/utils/: tree_sitter_manager.py
tests/e2e/: test_mcp_container.py
tests/e2e/plugin/: test_plugin_lifecycle.py  test_sample_apps.py
tests/integration/: test_http_transport_integration.py
tests/integration/plugin/: test_memory_integration.py  test_otel_integration.py  test_plugin_load.py
tests/unit/: test_http_transport.py
tests/unit/plugin/: test_otel_processor.py  test_plugin_registry.py  test_xdebug_parser.py
website/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
website/src/: App.tsx  index.css
website/src/components/: CookbookSection.tsx  DemoSection.tsx  ExamplesSection.tsx  FeaturesSection.tsx  HeroSection.tsx  InstallationSection.tsx  Navbar.tsx  SocialMentionsTimeline.tsx  TestimonialSection.tsx
website/src/pages/: Index.tsx
(+9 files in other folders)
