[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cgc-plugin-memory"
version = "0.1.0"
description = "Project knowledge memory plugin for CodeGraphContext"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "CodeGraphContext Contributors" }
]
dependencies = [
    "codegraphcontext>=0.3.0",
    "typer[all]>=0.9.0",
    "neo4j>=5.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
]

[project.entry-points."cgc_cli_plugins"]
memory = "cgc_plugin_memory"

[project.entry-points."cgc_mcp_plugins"]
memory = "cgc_plugin_memory"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cgc_plugin_memory*"]
