[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cgc-plugin-otel"
version = "0.1.0"
description = "OpenTelemetry span processor plugin for CodeGraphContext"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "CodeGraphContext Contributors" }
]
dependencies = [
    "codegraphcontext>=0.3.0",
    "typer[all]>=0.9.0",
    "neo4j>=5.15.0",
    "grpcio>=1.57.0",
    "grpcio-tools>=1.57.0",
    "opentelemetry-proto>=0.43b0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-api>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
]

[project.entry-points."cgc_cli_plugins"]
otel = "cgc_plugin_otel"

[project.entry-points."cgc_mcp_plugins"]
otel = "cgc_plugin_otel"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cgc_plugin_otel*"]
